# session

./: .gitignore  README.md  build_all_docs.bat  build_all_docs.sh  geometry_spec.json  point_python.json
.github/workflows/: build-cpp.yml  build-docs.yml  build-python.yml  build-rust.yml  deploy-docs.yml
cpp/html/: annotated.html  annotated_dup.js  classes.html  classsession__cpp_1_1Color-members.html  classsession__cpp_1_1Color.html  classsession__cpp_1_1Color.js  classsession__cpp_1_1Point-members.html  classsession__cpp_1_1Point.html  classsession__cpp_1_1Point.js  classsession__cpp_1_1Point__coll__graph.dot  color_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  functions_vars.html  globals_8h_source.html  graph_legend.html  guid_8h_source.html  index.html  navtreedata.js  navtreeindex0.js  point_8h_source.html
session_cpp/: .gitignore  CMakeLists.txt  DOXYGEN_AWESOME_SETUP.md  doc.sh  main.cpp
session_docs/: build_docs.bat  build_docs.sh  index.html
session_json/: validator.py
session_py/: README.md  build_docs.sh  main.py  point_python.json  pyproject.toml  scene_demo.py  tree_graph_demo.py
session_py/docs/: conf.py  index.rst
session_py/examples/: demo.py
session_py/src/: color.py  point.py
session_py/src/session_py/: __init__.py  color.py  graph.py  objects.py  point.py  session.py  tree.py  vector.py
session_rust/: Cargo.toml  README.md  point_rust.json
session_validation/: README.md  validation_config.json  validator.py
(+104 files in other folders)
